FIX: Fixed the main section being slightly covered by the heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-/* IMported Google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Share+Tech&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Share+Tech+Mono&display=swap');
 
 /* Overiding default browser styles*/
 * {
@@ -20,7 +19,7 @@ body {
 }
 
 h1 {
-    font-family: 'Share-Tech', sans-serif;
+    font-family: 'Share-Tech-Mono', sans-serif;
 }
 
 /*Header*/
@@ -107,6 +106,10 @@ footer {
 @media screen and (min-width: 768px) {
 
     /*Header*/
+    header {
+        align-items: baseline;
+    }
+
     nav {
         display: block;
         position: relative;
@@ -125,5 +128,10 @@ footer {
 
     .nav-toggle-label {
         display: none;
+    }
+
+    /*Main Content*/
+    main {
+        margin-top: 59px;
     }
 }
